added slashcommand builder

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +13,8 @@
     "axios": "^1.6.8",
     "discord.js": "^14.12.1",
     "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "eslint": "^9.1.1"
   }
 }
